@@ -210,3 +210,5 @@ fixed the -fshort-wchar switch, which was not working correctly.
 fixed the -fsyntax switch, which was not working correctly.
 
 the parity.doc documentation project has been added, which provides thorough descriptions of configuration and command line switches, also including some information about the internal workings of parity.
+
+not finding one of the executable (assembler, compiler, linker, manifest tool) during configure, is no longer fatal. also the checks for this executables at runtime have been moved to right before using them, so a missing assembler is now ok, as long as you don't try to assemble something.
